Show Trail Checkbox
Added checkbox to front end that toggles showing the trails. Related adjustments made to main and physics body.

--- a/index.html
+++ b/index.html
@@ -13,15 +13,18 @@
       <p id="frameRate"></p>
       <p id="bodyCount"></p>
       <input type="range" min="1" max="2500" value="50" class="slider" id="bodyCountSlider">
+      <input type="checkbox" id="showTrails" onclick="toggleTrails()">
       <p> Click to refresh </p>
       <!--Add some controls plus some data to display like velocity XYZ, angular velocity, momentum, acceleration. Maybe add different animation functions to demonstrate different algorithms.-->
+      <!--Maybe add config options - using the body count with controls for particle system play, and one is the default milky way model setup to detail-->
     </div>
     <script type="module" src="/main.js"></script>
     <script type="module">
-      import { init, getFramerate, bodyCount, setBodyCount } from "/main.js";
+      import { init, getFramerate, bodyCount, setBodyCount, setShowTrail } from "/main.js";
 
       let bodyCountSlider = document.getElementById("bodyCountSlider");
       bodyCountSlider.value = bodyCount;
+      let showTrailsBox = document.getElementById("showTrails");
 
       function restartSim() {
         init();
@@ -39,6 +42,11 @@
         init();
       }
       bodyCountSlider.addEventListener('mouseup', updateBodyCount);
+
+      function toggleTrails(){
+        setShowTrail(showTrailsBox.checked)
+      }
+      window.toggleTrails = toggleTrails;
     </script>
   </body>
 </html>
