--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <input type="range" min="1" max="1000" value="50" class="slider" id="bodyCountSlider">
       <input type="checkbox" id="showTrails" onclick="toggleTrails()">
       <p id="spawnRange"></p>
-      <input type="range" min=".5" max="15" value="50" class="slider" id="spawnRangeSlider">
+      <input type="range" min=".5" max="15" value="1" step=".5" class="slider" id="spawnRangeSlider">
       <p id="bounceEffect"></p>
       <input type="range" min="0" max="1" value="0" step=".01" class="slider" id="bounceEffectSlider">
       <button  onclick="swapDetectionMode()"> Swap Detection Mode </button>
