--- a/index.html
+++ b/index.html
@@ -12,20 +12,33 @@
     <div class="ControlAccessPanel">
       <p id="frameRate"></p>
       <p id="bodyCount"></p>
-      <input type="range" min="1" max="1000" value="50" class="slider" id="bodyCountSlider">
+      <input type="range" min="1" max="2500" value="50" class="slider" id="bodyCountSlider">
+      <p id="currentSpeed"></p>
+      <input type="range" min="0" max="3" value="1" step=".01" class="slider" id="speedModifierSlider">
+      Trail Length:
+      <input type="range" min="1" max="300" value="50" class="slider" id="trailSlider">
+      Trail visibilty:
       <input type="checkbox" id="showTrails" onclick="toggleTrails()">
+      Collision Tree Visibility:
+      <input type="checkbox" id="showOctTree" onclick="toggleOctTree()">
+      <p id="collisionTreeDepthText"></p>
+      <input type="range" min="0" max="8" value="50" class="slider" id="collisionTreeDepth">
       <p id="spawnRange"></p>
-      <input type="range" min=".5" max="15" value="1" step=".5" class="slider" id="spawnRangeSlider">
+      <input type="range" min=".5" max="30" value="1" step=".5" class="slider" id="spawnRangeSlider">
       <p id="bounceEffect"></p>
       <input type="range" min="0" max="1" value="0" step=".01" class="slider" id="bounceEffectSlider">
-      <button  onclick="swapDetectionMode()"> Swap Detection Mode </button>
+      <select id="animationLoops">
+        <option value="octTreeRedraw">OctTree Redraw</option>
+        <option value="bruteForce">Brute Force O(n^2)</option>
+        <option value="octTreeStatic">OctTree Static</option>
+      </select>
       <p  onclick="restartSim()"> Click here to refresh </p>
       <!--Add some controls plus some data to display like velocity XYZ, angular velocity, momentum, acceleration. Maybe add different animation functions to demonstrate different algorithms.-->
       <!--Maybe add config options - using the body count with controls for particle system play, and one is the default milky way model setup to detail-->
     </div>
     <script type="module" src="/main.js"></script>
     <script type="module">
-      import { init, getFramerate, bodyCount, setBodyCount, setShowTrail, showTrails, setSpawnRange, maxSpawnRange, setBounceEffect, bounceEffect, swapAnimationLoop } from "/main.js";
+      import { setMaxDepth, maxDepth, init, getFramerate, bodyCount, setBodyCount, speedModifier, setSpeedModifier, toggleDrawOctTree, octTree, setTrailLength, setShowTrail, showTrails, setSpawnRange, maxSpawnRange, setBounceEffect, bounceEffect, swapAnimationLoop } from "/main.js";
       import AUModifier from './Bodies/physicsBody.js';
 
       let bodyCountSlider = document.getElementById("bodyCountSlider");
@@ -35,8 +48,13 @@
       spawnRangeSlider.value = maxSpawnRange;
       let bounceEffectSlider = document.getElementById("bounceEffectSlider");
       bounceEffectSlider.value = bounceEffect;
+      document.getElementById("showOctTree").checked = octTree.visibleTree;
+      let trailSlider = document.getElementById("trailSlider");
+      let speedModifierSlider = document.getElementById("speedModifierSlider");
+      speedModifierSlider.value = speedModifier;
+      let collisionTreeSlider = document.getElementById("collisionTreeDepth");
+      collisionTreeSlider.value = maxDepth;
 
-      console.log(showTrails);
       showTrailsBox.checked = showTrails;
 
       function restartSim() {
@@ -49,11 +67,13 @@
         document.getElementById("bodyCount").textContent = "Body Count: " + bodyCountSlider.value;
         document.getElementById("spawnRange").textContent = "Spawn Range (AU): " + spawnRangeSlider.value;
         document.getElementById("bounceEffect").textContent = "Bounce Effect: " + bounceEffectSlider.value;
+        document.getElementById("currentSpeed"). textContent = "Current Sim Speed: " + speedModifier;
+        document.getElementById("collisionTreeDepthText"). textContent = "Collision Tree Max Depth: " + maxDepth;
       }
       setInterval(updateSimData, 100);
 
       function updateBodyCount() {
-        setBodyCount(bodyCountSlider.value);
+        setBodyCount(bodyCountSlider.value - 1);
         init();
       }
       bodyCountSlider.addEventListener('mouseup', updateBodyCount);
@@ -74,11 +94,33 @@
       }
       bounceEffectSlider.addEventListener('mouseup', updateBounceEffect);
 
-      function swapDetectionMode() {
-        swapAnimationLoop();
+      function swapAnimationLoops(event) {
+        let selected = event.target.value;
+
+        swapAnimationLoop(selected);
         restartSim();
       }
-      window.swapDetectionMode = swapDetectionMode;
+      document.getElementById("animationLoops").addEventListener("change", swapAnimationLoops);
+
+      function toggleOctTree() {
+        toggleDrawOctTree();
+      }
+      window.toggleOctTree = toggleOctTree;
+
+      function setBodyTrailLength(){
+        setTrailLength(trailSlider.value);
+      }
+      trailSlider.addEventListener('mouseup', setBodyTrailLength);
+
+      function updateSpeedModifier(){
+        setSpeedModifier(speedModifierSlider.value);
+      }
+      speedModifierSlider.addEventListener('mousemove', updateSpeedModifier);
+
+      function updateMaxDepth(){
+        setMaxDepth(collisionTreeSlider.value);
+      }
+      collisionTreeSlider.addEventListener('mousemove', updateMaxDepth);
     </script>
   </body>
 </html>
