--- a/index.html
+++ b/index.html
@@ -10,31 +10,49 @@
   </head>
   <body>
     <div class="ControlAccessPanel">
-      <p id="frameRate"></p>
-      <p id="bodyCount"></p>
-      <input type="range" min="0" max="5000" value="50" class="slider" id="bodyCountSlider">
+      <div class="controlInfoPanel">
+        <p id="frameRate"></p>
+      </div>
       <p id="currentSpeed"></p>
       <input type="range" min="0" max="3" value="1" step=".01" class="slider" id="speedModifierSlider">
-      Trail Length:
-      <input type="range" min="1" max="300" value="50" class="slider" id="trailSlider">
-      Trail visibilty:
-      <input type="checkbox" id="showTrails" onclick="toggleTrails()">
-      Collision Tree Visibility:
-      <input type="checkbox" id="showOctTree" onclick="toggleOctTree()">
-      <p id="collisionTreeDepthText"></p>
-      <input type="range" min="0" max="8" value="50" class="slider" id="collisionTreeDepth">
-      <p id="spawnRange"></p>
-      <input type="range" min=".5" max="30" value="1" step=".5" class="slider" id="spawnRangeSlider">
+      <div>
+        Trail Length: 
+        <input type="range" min="1" max="300" value="50" class="slider" id="trailSlider">
+      </div>
+      <div>
+        Trail visibilty: 
+        <input type="checkbox" id="showTrails" onclick="toggleTrails()">
+      </div>
+      <div class="collisionTreeControls">
+        Collision Tree Visibility: 
+        <input type="checkbox" id="showOctTree" onclick="toggleOctTree()">
+        <p id="collisionTreeDepthText"></p>
+        <input type="range" min="0" max="8" value="50" class="slider" id="collisionTreeDepth">
+      </div> 
       <p id="bounceEffect"></p>
-      <input type="range" min="0" max="1" value="0" step=".01" class="slider" id="bounceEffectSlider">
+      <input type="range" min="0" max="2" value="0" step=".01" class="slider" id="bounceEffectSlider">
       <select id="animationLoops">
         <option value="octTreeRedraw">OctTree Redraw</option>
         <option value="bruteForce">Brute Force O(n^2)</option>
         <option value="octTreeStatic">OctTree Static</option>
       </select>
+      <div>
+        Sandbox Controls: 
+        <input type="checkbox" id="sandBoxCheckBox" onclick="toggleSandBoxMode()">
+      </div>
+      <div>
+        Desired Scene: 
+        <select id="sceneSelection">
+          <option value="Empty Scene">Empty Scene</option>
+        </select>
+        <div id="controlSceneStart">
+          <p id="bodyCount"></p>
+          <input type="range" min="0" max="7500" value="50" class="slider" id="bodyCountSlider">
+          <p id="spawnRange"></p>
+          <input type="range" min=".5" max="50" value="1" step=".5" class="slider" id="spawnRangeSlider">
+        </div>
+      </div>
       <p  onclick="restartSim()"> Click here to refresh </p>
-      <!--Add some controls plus some data to display like velocity XYZ, angular velocity, momentum, acceleration. Maybe add different animation functions to demonstrate different algorithms.-->
-      <!--Maybe add config options - using the body count with controls for particle system play, and one is the default milky way model setup to detail-->
     </div>
     <script type="module" src="/main.js"></script>
     <script type="module">
@@ -42,22 +60,34 @@
       import AUModifier from './Bodies/physicsBody.js';
 
       let bodyCountSlider = document.getElementById("bodyCountSlider");
-      bodyCountSlider.value = gravSimScene.bodyCount;
       let showTrailsBox = document.getElementById("showTrails");
-      showTrailsBox.checked = gravSimScene.showTrail;
       let spawnRangeSlider = document.getElementById("spawnRangeSlider");
-      spawnRangeSlider.value = gravSimScene.maxSpawnRange;
       let bounceEffectSlider = document.getElementById("bounceEffectSlider");
-      bounceEffectSlider.value = bounceEffect;
-      document.getElementById("showOctTree").checked = gravSimScene.octTree.visibleTree;
       let trailSlider = document.getElementById("trailSlider");
       let speedModifierSlider = document.getElementById("speedModifierSlider");
-      speedModifierSlider.value = gravSimScene.speedModifier;
       let collisionTreeSlider = document.getElementById("collisionTreeDepth");
-      collisionTreeSlider.value = gravSimScene.maxDepth;
-      document.getElementById("animationLoops").value = "octTreeRedraw";
-      gravSimScene.swapAnimationLoop("octTreeRedraw");
+      let sceneDropdown = document.getElementById("sceneSelection");
+      let controlSceneStart = document.getElementById("controlSceneStart");
+      let sandBoxCheckBox = document.getElementById("sandBoxCheckBox");
 
+      bodyCountSlider.value = gravSimScene.bodyCount;
+      showTrailsBox.checked = gravSimScene.showTrail;
+      spawnRangeSlider.value = gravSimScene.maxSpawnRange;
+      bounceEffectSlider.value = bounceEffect;
+      collisionTreeSlider.value = gravSimScene.maxDepth;
+      speedModifierSlider.value = gravSimScene.speedModifier;
+      document.getElementById("animationLoops").value = gravSimScene.animationName;
+      document.getElementById("showOctTree").checked = gravSimScene.octTree.visibleTree;
+      sandBoxCheckBox.checked = gravSimScene.sandBoxMode;
+      controlSceneStart.style.display = (gravSimScene.desiredScene == gravSimScene.defaultScene) ? 'flex' : 'none';
+
+
+      let option = document.createElement('option');
+      option.value = gravSimScene.defaultScene;
+      option.innerHTML = gravSimScene.defaultScene;
+      sceneDropdown.appendChild(option);
+      //load saved scenes into scene Dropdown
+      sceneDropdown.value = gravSimScene.desiredScene;
 
       function restartSim() {
         gravSimScene.init();
@@ -123,6 +153,18 @@
         gravSimScene.setMaxDepth(collisionTreeSlider.value);
       }
       collisionTreeSlider.addEventListener('mousemove', updateMaxDepth);
+
+      function setScene(event){
+        gravSimScene.desiredScene = event.target.value;
+        gravSimScene.init();
+        controlSceneStart.style.display = (gravSimScene.desiredScene == gravSimScene.defaultScene) ? 'flex' : 'none';
+      }
+      sceneDropdown.addEventListener("change", setScene);
+
+      function toggleSandBoxMode(){
+        gravSimScene.toggleSandBoxMode();
+      }
+      window.toggleSandBoxMode = toggleSandBoxMode;
     </script>
   </body>
 </html>
