Huge Collision bounce fix
Collisions were huge after altering the slider because in the newer logic I'm testing (inealstic with impulse along collision normal), the impulse equation uses (1 + bounceEffect) and bounceEffect was a string. Updated main.js to force the value to a number.

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       spawnRangeSlider.value = gravSimScene.maxSpawnRange;
       speedModifierSlider.value = gravSimScene.solution.speedModifier ?? 1;
       gravSimScene.speedModifier = gravSimScene.solution.speedModifier ?? 1;
-      bounceEffectSlider.value = bounceEffect;
+      bounceEffectSlider.value = gravSimScene.bounceEffect;
       collisionTreeSlider.value = gravSimScene.maxDepth;
       document.getElementById("animationLoops").value = gravSimScene.animationName;
       document.getElementById("showOctTree").checked = gravSimScene.treeVisibility;
